DB Level changes added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,33 @@
 spring.main.web-application-type=NONE
 
 # Byte Index info
+# HeartBeat
 system.id.start=1
 system.id.end=4
-id.delimiter=-
+device.id.start=5
+device.id.end=7
+device.type.idx=8
+origin.rssi.idx=9
+origin.network.lvl.idx=10
+hop.counter.idx=11
+message.counter.start=12
+message.counter.end=13
+latency.counter.start=14
+latency.counter.end=15
+packet.type.idx=16
+message.type.idx=17
+system.id.delimiter=-
+hb.value.skip=0
+
+# Kafka Details
+kafka.topic=gds-ss-mesh
+kafka.bootstrap.url=localhost:9092
+kafka.auto.offset.reset.config=latest
+kafka.consumer.group.id=gds-analytics
+
+
+# JDBC
+jdbc.url=jdbc:postgresql://gdsociety.co.in:5432/SMAT
+db.username=postgres
+db.password=Jpx8BEtsA4kgjEda
 
