--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <spring.parent.version>2.3.2.RELEASE</spring.parent.version>
         <kafka.version>2.2.1</kafka.version>
         <log4j.version>1.2.17</log4j.version>
+        <postgresql.version>42.2.12</postgresql.version>
     </properties>
 
     <parent>
@@ -34,6 +35,12 @@
                 <artifactId>spring-boot-starter-logging</artifactId>
             </exclusion>
         </exclusions>
+    </dependency>
+
+    <dependency>
+        <groupId>org.postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>${postgresql.version}</version>
     </dependency>
 
     <dependency>
