Kafka Integration with DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.main.web-application-type=NONE
 
 # Byte Index info
-# HeartBeat
+    # HeartBeat
 system.id.start=1
 system.id.end=4
 device.id.start=5
@@ -31,4 +31,7 @@ kafka.consumer.group.id=gds-analytics
 jdbc.url=jdbc:postgresql://gdsociety.co.in:5432/SMAT
 db.username=postgres
 db.password=Jpx8BEtsA4kgjEda
+
+# Event Values
+heart.beat.event=2
 
