Inserting water level event

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@
 spring.main.web-application-type=NONE
 
 # Byte Index info
-    # HeartBeat
 system.id.start=1
 system.id.end=4
 device.id.start=5
@@ -33,5 +32,8 @@ db.username=postgres
 db.password=Jpx8BEtsA4kgjEda
 
 # Event Values
+event.id.idx=18
 heart.beat.event=2
+water.level.event.id=69
+water.lvl.percentage.idx=21
 
