Inserting water level event

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ hb.value.skip=0
 
 # Kafka Details
 kafka.topic=gds-ss-mesh
-kafka.bootstrap.url=localhost:9092
+kafka.bootstrap.url=gdsociety.co.in:9092
 kafka.auto.offset.reset.config=latest
 kafka.consumer.group.id=gds-analytics
 
