Corrected SystemId Format

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,13 +1,12 @@
 # initialize root logger with level ERROR for stdout and fout
 #log4j.rootLogger=ERROR,stdout,fout
 
-log4j.rootLogger=DEBUG,ERROR,fout
+log4j.rootLogger=WARN,DEBUG,ERROR,fout
 
 
 # set the log level for these components
-log4j.logger.com.gds.engine=DEBUG
-
-log4j.logger.io.netty=ERROR
+log4j.logger.com.gds.analytics=DEBUG
+log4j.logger.org.apache.kafka.clients=WARN
 
 # add a ConsoleAppender to the logger stdout to write to the console
 #log4j.appender.stdout=org.apache.log4j.ConsoleAppender
