Added WaterLevelApi Trigger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,11 @@ heart.beat.event=2
 water.level.event.id=69
 water.lvl.percentage.idx=21
 
+# API Event values
+event.api.water.level.id=72
+
+# HTTP URL
+gds.rule.url=http://gdsociety.co.in/gdportal/gds-rest-api/smat/waterlevel/rule/status
+gds.water.level.trigger.url=http://gdsociety.co.in/gdportal/gds-rest-api/smat/waterlevel/trigger
+gds.bearer.token=Bearer eyJhbGciOiJIUzUxMiJ9.eyJleHAiOjE1NjQ3Njg5OTMsImlhdCI6MTU2NDc1MDk5M30.okGaw0EsNd-X6TE8QET_uxxtJ-B5hE2DGUgPeVsY1enjufcnd9ayIzr6njXk48DIV2asDKr3D39EJt_2LOW3bQ
+gds.user.key=db8f3f59-a1af-4c7a-acf1-04be3b61d015
