--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <kafka.version>2.2.1</kafka.version>
         <log4j.version>1.2.17</log4j.version>
         <postgresql.version>42.2.12</postgresql.version>
+        <simple.json.version>1.1.1</simple.json.version>
     </properties>
 
     <parent>
@@ -53,6 +54,12 @@
         <groupId>org.apache.kafka</groupId>
         <artifactId>kafka-clients</artifactId>
         <version>${kafka.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.googlecode.json-simple</groupId>
+        <artifactId>json-simple</artifactId>
+        <version>${simple.json.version}</version>
     </dependency>
 
 </dependencies>
