--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,13 +6,8 @@ log4j.rootLogger=WARN,DEBUG,ERROR,fout
 
 # set the log level for these components
 log4j.logger.com.gds.analytics=DEBUG
-log4j.logger.org.apache.kafka.clients=WARN
+log4j.logger.org.apache.kafka=DEBUG
 
-# add a ConsoleAppender to the logger stdout to write to the console
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-## use a simple message format
-#log4j.appender.stdout.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 
 # add a FileAppender to the logger fout
 log4j.appender.fout=org.apache.log4j.FileAppender
