--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <log4j.version>1.2.17</log4j.version>
         <postgresql.version>42.2.12</postgresql.version>
         <simple.json.version>1.1.1</simple.json.version>
+        <logback.version>1.2.3</logback.version>
     </properties>
 
     <parent>
@@ -42,6 +43,18 @@
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <version>${postgresql.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>${logback.version}</version>
+    </dependency>
+
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
     </dependency>
 
     <dependency>
