Added MOTOR Status Event.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,15 @@ db.password=Jpx8BEtsA4kgjEda
 # Event Values
 event.id.idx=18
 heart.beat.event=2
+
+# Water Level Event
 water.level.event.id=69
 water.lvl.percentage.idx=21
 water.lvl.cm.idx=23
+
+# Motor status
+motor.status.hb.event=74
+motor.status.idx=21
 
 # API Event values
 event.api.water.level.id=72
