Sending MotorStatusEvent To API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,5 @@ gds.rule.url=http://gdsociety.co.in/gdportal/gds-rest-api/smat/waterlevel/rule/s
 gds.water.level.trigger.url=http://gdsociety.co.in/gdportal/gds-rest-api/smat/waterlevel/trigger
 gds.bearer.token=Bearer eyJhbGciOiJIUzUxMiJ9.eyJleHAiOjE1NjQ3Njg5OTMsImlhdCI6MTU2NDc1MDk5M30.okGaw0EsNd-X6TE8QET_uxxtJ-B5hE2DGUgPeVsY1enjufcnd9ayIzr6njXk48DIV2asDKr3D39EJt_2LOW3bQ
 gds.user.key=db8f3f59-a1af-4c7a-acf1-04be3b61d015
+
+motor.status.url=http://gdsociety.co.in/gdportal/gds-rest-api/smat/get/mcu/event
