--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,9 +27,19 @@ kafka.consumer.group.id=gds-analytics
 
 
 # JDBC
-jdbc.url=jdbc:postgresql://gdsociety.co.in:5432/SMAT
+jdbc.url=jdbc:postgresql://gdsociety.org:5432/SMAT
 db.username=postgres
-db.password=Jpx8BEtsA4kgjEda
+db.password=3jPeG73HKe5LY4Qh
+
+# Prod :
+# DB : gdsociety.org
+# user: postgres
+# pswd: 3jPeG73HKe5LY4Qh
+
+# Pre-Prod
+# DB : gdsociety.co.in
+# user : postgres
+# pswd: Jpx8BEtsA4kgjEda
 
 # Event Values
 event.id.idx=18
