Added flow meter changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 # Disabling SpringBoot from WEB
 spring.main.web-application-type=NONE
 
+## Github token
+##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
+
+
 # Byte Index info
 system.id.start=1
 system.id.end=4
@@ -53,6 +57,13 @@ water.lvl.cm.idx=23
 # Motor status
 motor.status.hb.event=74
 motor.status.idx=21
+
+# Flow meter event
+flow.meter.event=114
+flow.meter.meta1.start=22
+flow.meter.meta1.end=25
+flow.meter.meta2.start=26
+flow.meter.meta2.end=34
 
 # API Event values
 event.api.water.level.id=72
