--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.logger.org.apache.kafka=DEBUG
 # add a FileAppender to the logger fout
 log4j.appender.fout=org.apache.log4j.FileAppender
 # create a log file
-log4j.appender.fout.File=E:/tmp/gds-analytics/gds-analytics.log
+log4j.appender.fout.File=/tmp/gds-analytics/gds-analytics.log
 log4j.appender.fout.layout=org.apache.log4j.PatternLayout
 # use a more detailed message pattern
 log4j.appender.fout.layout.ConversionPattern=%p\t%d{ISO8601}\t%r\t%c\t[%t]\t%m%n
