--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -67,6 +67,7 @@ flow.meter.meta2.end=34
 
 # API Event values
 event.api.water.level.id=72
+event.api.flow.meter.id=49
 
 # HTTP URL
 gds.rule.url=https://gdsociety.org/gdportal/gds-rest-api/smat/waterlevel/rule/status
